# LIDAR-human-prediction

./: .gitignore  .gitmodules  README.md  getting_started.ipynb  training_loop.py  transformer_note.ipynb
digit_mujoco-main/: .gitignore  CMakeLists.txt  README.md  setup.py
digit_mujoco-main/DigitControlPybind/src/: digitControlEnv.hpp  digit_pybind.cpp
digit_mujoco-main/DigitControlPybind/src/Cutils/: BasicEigenTypes.hpp
digit_mujoco-main/DigitControlPybind/src/include/digit_controller/include/: digit_controller.hpp  digit_definition.hpp  digit_state.hpp  motor_control.hpp  safety_manager.hpp  walking_trajectory.hpp
digit_mujoco-main/DigitControlPybind/src/include/digit_controller/include/AnalyticalKinematicsDynamics/: CMakeLists.txt  Makefile  cmake_install.cmake
digit_mujoco-main/DigitControlPybind/src/include/digit_controller/include/GeometricKinematics/: CMakeLists.txt  Makefile  cmake_install.cmake
digit_mujoco-main/DigitControlPybind/src/include/digit_controller/src/: digit_controller.cpp  motor_control.cpp  safety_manager.cpp  walking_trajectory.cpp
digit_mujoco-main/DigitControlPybind/src/include/digit_controller/src/config_files/: robot_config.toml
digit_mujoco-main/cfg/: digit_env_config.py
digit_mujoco-main/cfg/base/: base_config.py
digit_mujoco-main/cfg/test/vel_track_test/: vel_track_test_config.py  vel_track_test_env_config.py
digit_mujoco-main/envs/common/: robot_interface.py
digit_mujoco-main/envs/digit/: __init__.py  digit_env.py  digit_env_flat.py
digit_mujoco-main/envs/digit/test/vel_track_test/: vel_track_test_env_flat.py
digit_mujoco-main/garage/: _dtypes.py  _environment.py  _functions.py
digit_mujoco-main/garage/examples/torch/: bc_point_deterministic_policy.py  ppo_pendulum.py
digit_mujoco-main/garage/experiment/: deterministic.py  snapshotter.py
digit_mujoco-main/garage/sampler/: default_worker.py  ray_sampler.py
digit_mujoco-main/helper/: math_utils.py
digit_mujoco-main/models/flat/: digit-v3-flat.xml
digit_mujoco-main/modules/: __init__.py  mbc.py
digit_mujoco-main/test/: recording_vel_tracking.py
digit_mujoco-main/utils/: my_helper.py  reward_functions.py
low_dim_data/: angles1.txt  angles10.txt  angles11.txt  angles12.txt  angles13.txt  angles14.txt  angles15.txt  angles16.txt  angles17.txt  angles18.txt  angles19.txt  angles2.txt  angles20.txt  angles21.txt  angles22.txt  angles23.txt  angles24.txt  angles25.txt  angles26.txt  angles27.txt  angles28.txt  angles29.txt  angles3.txt  angles30.txt  angles31.txt  angles32.txt  angles33.txt  angles34.txt  angles35.txt  angles36.txt  angles37.txt  angles38.txt  angles39.txt  angles4.txt  angles40.txt  angles41.txt  angles42.txt  angles43.txt  angles44.txt  angles45.txt  (+63 more)
model/: EncoderDecoderModel.pt  MogazeDataset.py  TrajectoryDataset.py  configs.py  data_utils.py  dataset_mogaze.py  datasets.py  decoder_GT.py  encoder_GT.py  encoder_decoder_GT.py  gen_model.py  gpr.py  individual_TF.py  models.py  mogaze_utils.py  train_utils.py  training_loop.py  transformer_note.ipynb
model/transformer/: decoder.py  decoder_layer.py  encoder.py  encoder_layer.py  layer_norm.py  multihead_attention.py  pointerwise_feedforward.py  positional_encoding.py  sublayer_connection.py
